<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="16dp">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="22sp"
        android:textColor="#363A43"
        android:textStyle="bold"
        tools:text="What country does this flag belong to?"/>

    <ImageView
        android:id="@+id/question_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:src="@drawable/ic_flag_of_argentina"
        android:contentDescription="Quiz image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:minHeight="50dp"
            android:progress="5"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/progressbar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="14sp"
            tools:text="0/9"
            android:textColor="@color/GRAY"
          />

    </LinearLayout>


    <TextView
        android:id="@+id/opt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:layout_margin="10dp"
        android:background="@drawable/default_option_border_bg"
        android:text="@string/btn1"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/default_option_border_bg"
        android:padding="15sp"
        android:text="@string/btn2"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/default_option_border_bg"
        android:padding="15sp"
        android:text="@string/btn3"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_option_border_bg"
        android:layout_margin="10dp"
        android:padding="15sp"
        android:text="@string/btn4"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/opt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/default_option_border_bg"
        android:padding="15sp"
        android:text="@string/btn5"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15sp"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        />
  </LinearLayout>

</ScrollView>